# fmtcalc

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs  token.rs
